fixes spacing on plan page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,10 +164,11 @@ footer li {
 }
 
 .card-deck {
-    width: 60%; 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    width: 100%; 
+    display: inline-grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
     grid-gap: .1rem;
+    justify-items: center;
 }
 
 .plan-card {
